# PredatorOrPrey

./: CMakeLists.txt  README.md  main.cpp
lib/include/: Board.h  Critter.h  DoodleBug.h  FileReader.h  MatingAnt.h  Predator.h  Prey.h  QueenAnt.h  Simulation.h  WorkerAnt.h
lib/src/: Board.cpp  Critter.cpp  DoodleBug.cpp  FileReader.cpp  MatingAnt.cpp  Predator.cpp  Prey.cpp  QueenAnt.cpp  Simulation.cpp  WorkerAnt.cpp
